--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 
             <div class="abas-texto">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal"> seus objetivos 1 <h3>
+                    <h3 class="aba-conteudo-titulo-principal"> Cursar PRF <h3>
                             <h4 class="aba-conteudo-titulo-secundario"> tempo para completar </h4>
                             <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal"> mudar para os seus objetivos 2</h3>
+                    <h3 class="aba-conteudo-titulo-principal"> Ter uma familia</h3>
                     <h4 class="aba-conteudo-titulo-secundario"> tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal"> mudar para os seus objetivos 3</h3>
+                    <h3 class="aba-conteudo-titulo-principal"> Ter um carro</h3>
                     <h4 class="aba-conteudo-titulo-secundario"> tempo para completar</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal"> mudar para os seus objetivos 3</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Tirar um tempo para mim</h3>
                     <h4 class="aba-conteudo-titulo-secundario"> tempo para completar</h4>
                     <div class="contador"></div>
                 </div>
